# scwoaservices_exampleservice

./: .condarc  .gitignore  Dockerfile_condabase  Dockerfile_condaworkflow  Dockerfile_poetryworkflow  README.md  docker-compose_condaworkflow.yaml  docker-compose_poetryworkflow.yaml  environment.yml  mkdocs.yml  pyproject.toml
conda-build/: meta.md5  meta.yaml
docs/: .gitignore
exampleservice/: README.md  errors.py  options.py  rules.py  service.py
exampleservice/blueprints/: example_api.py
exampleservice/models/: example_api.py
exampleservice/processing/: example_api.py
exampleservice/tests/: test_models.py
