[tool.poetry]
name = "exampleservice"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Simon Kallfass <skallfass@ouroboros.info>"]
readme = "README.md"
repository = "git@gitlab.com:skallfass/exampleservice.git"

[tool.poetry.dependencies]
python = "^3.7"
scwoaservices = {git = "git@github.com:skallfass/scwoaservices_poetry.git", tag = "0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "~7"
mkdocs = "~1"
monkeytype = "~19"
pydoc-markdown = "~2"
pylint = "~2"
yapf = "~0"

[tool.poetry.scripts]
exampleservice = 'exampleservice.service:run_service'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
